[package]
name = "adapton-lab"
version = "0.1.0"
authors = ["Matthew Hammer <matthew.hammer@colorado.edu>"]

[dependencies]
time = "0.1"
rand = "0.3"
# csv = ""
clap = "1"
# piston = "0.15.1"
# piston2d-graphics = "0.11.0"
# piston2d-opengl_graphics = "0.19.0"
# pistoncore-glutin_window = "0.17.1"

[dependencies.adapton]
git = "https://github.com/cuplv/adapton.rust.git"
branch = "dev"
# path = "/Users/hammer/adapton"

# [dependencies.iodyn]
# git = "https://github.com/cuplv/iodyn.rust.git"
# branch = "master"
# # path = "/Users/hammer/repo/iodyn.rust"
